finished improving f1-score and predicting on training data

--- a/archived_code/test_notebooks.ipynb
+++ b/archived_code/test_notebooks.ipynb
@@ -420,11 +420,95 @@
     "        print(\"Neural data loaded\")\n",
     "        print(\"All data loaded.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculating and displaying decoder performance before rewrite with functionm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### evaluate decoder performance - f1 score ###\n",
+    "# Also provide a lenient f1-score (where any prediction of a stimulus within \n",
+    "# the stimulus duration counts as a fully accurate predictions)\n",
+    "\n",
+    "## convert left and right spots to the same value (1) ## \n",
+    "\n",
+    "# find the test subset\n",
+    "training_test_split = TRAINING_TEST_SPLIT   \n",
+    "split_idx = int(np.round(neural.shape[0] * training_test_split))\n",
+    "# index stim_on mask to restrict data to the test subset\n",
+    "left_spot, right_spot = stim_on_frames[split_idx:,0], stim_on_frames[split_idx:,1]\n",
+    "# combine left and right spot stim_on mask\n",
+    "discrete_test_f1 = np.add(left_spot, right_spot)\n",
+    "\n",
+    "# convert predictions to also all be the same value\n",
+    "idx_to_replace = np.where(np.isin(predictions, 2))[0]\n",
+    "predictions_binary = np.copy(predictions)\n",
+    "predictions_binary[idx_to_replace] = 1\n",
+    "\n",
+    "## calculate f1-score ##\n",
+    "\n",
+    "f1_score = sklearn.metrics.f1_score(discrete_test_f1, predictions_binary)\n",
+    "\n",
+    "## calculate lenient f1-score ##\n",
+    "\n",
+    "stim_length = STIM_LENGTH_FRAMES\n",
+    "leniency_range = stim_length*2\n",
+    "predictions_binary_lenient = np.copy(predictions_binary)\n",
+    "\n",
+    "# find the indexes where a prediction was made\n",
+    "prediction_made = np.where(np.isin(predictions_binary, 1))[0]\n",
+    "\n",
+    "# for each index\n",
+    "for idx in prediction_made:\n",
+    "\n",
+    "    # check if this is a correct prediction (ground-truth also 1)\n",
+    "    if discrete_test_f1[idx] == 1:\n",
+    "        # for the leniency_range timepoints around the stimulus, copy any 1s from the ground truth to predictions\n",
+    "        upper_bound, lower_bound = np.ceil(idx+leniency_range/2).astype(int), np.ceil(idx-leniency_range/2).astype(int)\n",
+    "        predictions_binary_lenient[lower_bound:upper_bound] = discrete_test_f1[lower_bound:upper_bound]\n",
+    "\n",
+    "# find the lenient f1-score\n",
+    "f1_score_lenient = sklearn.metrics.f1_score(discrete_test_f1, predictions_binary_lenient)\n",
+    "\n",
+    "\n",
+    "## report f1-score ##\n",
+    "\n",
+    "print(f\"Strict f1-score:  {f1_score:.3f}\\nLenient f1-score: {f1_score_lenient:.3f}\")\n",
+    "\n",
+    "## save f1-score ##\n",
+    "if SAVE_FIGS:\n",
+    "    with open(f\"{model_dir}/{MODEL_VER}_f1-score.txt\", 'w') as f:\n",
+    "        f.write(f\"f1-score: {f1_score:.3f}\\n\")\n",
+    "        f.write(f\"f1-score_lenient: {f1_score_lenient:.3f}\\n\")\n",
+    "        # f.write(f\"f1-score_lenient_non-binary: {f1-score_lenient_non-binary:.3f}\\n\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "czebra",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
