--- a/test_notebooks/230829/decode_stimulus_laterality_supervised_inferred_spikes.ipynb
+++ b/test_notebooks/230829/decode_stimulus_laterality_supervised_inferred_spikes.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use inferred spikes (deconvolved) instead of raw calcium signal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -67,10 +74,10 @@
     "global SAVE_FIGS               # automatically save figures generated\n",
     "global STIM_TYPES              # dictionary of stim types to stim numbers\n",
     "global STIMS                   # relevant stims for model\n",
-    "global STIM_MASKS              # remove? \n",
     "global TRAINING_TEST_SPLIT     # split fraction for embedding model\n",
     "global STIM_LENGTH_FRAMES      # the length in frames of stimuli, assuming all stimuli have equal duration\n",
     "global HALF_STIM_MASK          # only use the second half of stimuli for training the model\n",
+    "global PREDICT_ON_TRAIN        # for decoder, do both training and prediciton on the training set\n",
     "\n",
     "LABEL = 'spot'                                                          # set as '' for time-contrastive\n",
     "EXTRA_LABEL = 'second-half-stims_deconv'\n",
@@ -93,7 +100,8 @@
     "STIM_MASKS = [['left_spot', 'right_spot']]\n",
     "TRAINING_TEST_SPLIT = 0.8\n",
     "STIM_LENGTH_FRAMES = 22\n",
-    "HALF_STIM_MASK = True"
+    "HALF_STIM_MASK = True\n",
+    "PREDICT_ON_TRAIN = False"
    ]
   },
   {
@@ -647,6 +655,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### FUNCTION ###\n",
+    "def create_lenient_predictions(test_data, prediction_data, stim_types):\n",
+    "    ''' find the indexes where a prediction was made '''\n",
+    "    stim_predictions = []\n",
+    "    for stim in stim_types:\n",
+    "        stim_predictions.append(np.where(np.isin(prediction_data, stim))[0])\n",
+    "\n",
+    "    for i in range(len(stim_predictions)):\n",
+    "        # for each stimulus predicted\n",
+    "        prediction = stim_predictions[i]\n",
+    "\n",
+    "        # for each index in current stimulus prediction\n",
+    "        for idx in prediction:\n",
+    "            # check if this is a correct prediction (ground-truth also the same stimulus category)\n",
+    "            if test_data[idx] == stim_types[i]:\n",
+    "                # for the leniency_range timepoints around the stimulus, copy any 1s from the ground truth to predictions\n",
+    "                upper_bound, lower_bound = np.ceil(idx+leniency_range/2).astype(int), np.ceil(idx-leniency_range/2).astype(int)\n",
+    "                predictions_lenient[lower_bound:upper_bound] = test_data[lower_bound:upper_bound]\n",
+    "\n",
+    "    return predictions_lenient"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -664,54 +700,75 @@
     "# Also provide a lenient f1-score (where any prediction of a stimulus within \n",
     "# the stimulus duration counts as a fully accurate predictions)\n",
     "\n",
-    "## convert left and right spots to the same value (1) ## \n",
     "\n",
-    "# find the test subset\n",
+    "## Define the test set ## \n",
+    "\n",
     "training_test_split = TRAINING_TEST_SPLIT   \n",
     "split_idx = int(np.round(neural.shape[0] * training_test_split))\n",
-    "# index stim_on mask to restrict data to the test subset\n",
-    "left_spot, right_spot = stim_on_frames[split_idx:,0], stim_on_frames[split_idx:,1]\n",
+    "\n",
+    "if PREDICT_ON_TRAIN:\n",
+    "    # for this case, set \"test\" subset of neural to just be the training subset \n",
+    "    # index stim_on mask to restrict data to the test subset\n",
+    "    left_spot, right_spot = stim_on_frames[:split_idx,0], stim_on_frames[:split_idx,1]\n",
+    "else:\n",
+    "    # index stim_on mask to restrict data to the test subset\n",
+    "    left_spot, right_spot = stim_on_frames[split_idx:,0], stim_on_frames[split_idx:,1]\n",
+    "\n",
     "# combine left and right spot stim_on mask\n",
     "discrete_test_f1 = np.add(left_spot, right_spot)\n",
     "\n",
-    "# convert predictions to also all be the same value\n",
+    "\n",
+    "## convert predictions to also all be the same value for binary f1-score ## \n",
+    "\n",
     "idx_to_replace = np.where(np.isin(predictions, 2))[0]\n",
-    "predictions_f1 = np.copy(predictions)\n",
-    "predictions_f1[idx_to_replace] = 1\n",
+    "predictions_binary = np.copy(predictions)\n",
+    "predictions_binary[idx_to_replace] = 1\n",
     "\n",
-    "## calculate f1-score ##\n",
     "\n",
-    "f1_score = sklearn.metrics.f1_score(discrete_test_f1, predictions_f1)\n",
+    "## calculate lenient predictions ##\n",
     "\n",
-    "## calculate lenient f1-score ##\n",
+    "predictions_binary_lenient = create_lenient_predictions(discrete_test_f1, predictions_binary, stim_types=[1])\n",
+    "predictions_multiclass_lenient = create_lenient_predictions(discrete_test_f1, predictions, stim_types=[1,2])\n",
     "\n",
-    "stim_length = STIM_LENGTH_FRAMES\n",
-    "leniency_range = stim_length*2\n",
-    "predictions_f1_lenient = np.copy(predictions_f1)\n",
     "\n",
-    "# find the indexes where a prediction was made\n",
-    "prediction_made = np.where(np.isin(predictions_f1, 1))[0]\n",
+    "## calculate binary f1-score ##\n",
     "\n",
-    "# for each index\n",
-    "for idx in prediction_made:\n",
+    "f1_score = sklearn.metrics.f1_score(discrete_test_f1, predictions_binary)\n",
     "\n",
-    "    # check if this is a correct prediction (ground-truth also 1)\n",
-    "    if discrete_test_f1[idx] == 1:\n",
-    "        # for the leniency_range timepoints around the stimulus, copy any 1s from the ground truth to predictions\n",
-    "        upper_bound, lower_bound = np.ceil(idx+leniency_range/2).astype(int), np.ceil(idx-leniency_range/2).astype(int)\n",
-    "        predictions_f1_lenient[lower_bound:upper_bound] = discrete_test_f1[lower_bound:upper_bound]\n",
     "\n",
-    "# find the lenient f1-score\n",
-    "f1_score_lenient = sklearn.metrics.f1_score(discrete_test_f1, predictions_f1_lenient)\n",
+    "## calculate lenient binary f1-score ##\n",
+    "\n",
+    "f1_score_lenient = sklearn.metrics.f1_score(discrete_test_f1, predictions_binary_lenient)\n",
+    "\n",
+    "\n",
+    "## calculate average multiclass f1-score ##\n",
+    "\n",
+    "f1_score_multiclass = sklearn.metrics.f1_score(discrete_test_f1, predictions, \n",
+    "                                                         average=None)\n",
+    "# find averages of the multiclass f1-score\n",
+    "f1_score_multiclass_average_stim = (f1_score_multiclass[1] + f1_score_multiclass[2])/2\n",
+    "f1_score_multiclass_average_all = (f1_score_multiclass[0] + f1_score_multiclass[1] + f1_score_multiclass[2])/3\n",
+    "\n",
+    "\n",
+    "## calcuate lenient average multiclass f1-score ##\n",
+    "\n",
+    "f1_score_multiclass_lenient = sklearn.metrics.f1_score(discrete_test_f1, predictions_multiclass_lenient, \n",
+    "                                                         average=None)\n",
+    "# find averages of the lenient multiclass f1-score\n",
+    "f1_score_multiclass_lenient_average_all = (f1_score_multiclass_lenient[0] + f1_score_multiclass_lenient[1])/2\n",
     "\n",
     "\n",
     "## report f1-score ##\n",
     "\n",
-    "print(f\"Strict f1-score:  {f1_score:.3f}\\nLenient f1-score: {f1_score_lenient:.3f}\")\n",
+    "print(f\"Strict f1-score:  {f1_score:.3f}\\nLenient f1-score: {f1_score_lenient:.3f}\\n\"+\n",
+    "      f\"Strict multiclass f1-score (stim-only avg): {f1_score_multiclass_weighted_stim:.3f}\\n\"+\n",
+    "      f\"Strict multiclass f1-score (avg all): {f1_score_multiclass_weighted_all:.3f}\\n\"+\n",
+    "      f\"Lenient multiclass f1-score (avg all): {f1_score_multiclass_weighted_all:.3f}\\n\")\n",
+    "\n",
     "\n",
     "## save f1-score ##\n",
     "if SAVE_FIGS:\n",
-    "    with open(f\"{model_dir}/{MODEL_VER}_f1-score.txt\", 'w') as f:\n",
+    "    with open(f\"{model_dir}/v{MODEL_VER}_f1-score.txt\", 'w') as f:\n",
     "        f.write(f\"f1-score: {f1_score:.3f}\\n\")\n",
     "        f.write(f\"f1-score_lenient: {f1_score_lenient:.3f}\\n\")\n",
     "        # f.write(f\"f1-score_lenient_non-binary: {f1-score_lenient_non-binary:.3f}\\n\")"
@@ -727,10 +784,10 @@
     "\n",
     "stim_length = 22\n",
     "leniency_range = stim_length*2\n",
-    "predictions_f1_lenient = predictions_f1\n",
+    "predictions_binary_lenient = predictions_binary\n",
     "\n",
     "# find the indexes where a prediction was made\n",
-    "prediction_made = np.where(np.isin(predictions_f1, 1))[0]\n",
+    "prediction_made = np.where(np.isin(predictions_binary, 1))[0]\n",
     "\n",
     "# for each index\n",
     "for idx in prediction_made:\n",
@@ -740,10 +797,10 @@
     "        # for the leniency_range timepoints around the stimulus, copy any 1s from the ground truth to predictions\n",
     "        upper_bound, lower_bound = np.ceil(idx+leniency_range/2).astype(int), np.ceil(idx-leniency_range/2).astype(int)\n",
     "        print(upper_bound, lower_bound)\n",
-    "        predictions_f1_lenient[lower_bound:upper_bound] = discrete_test_f1[lower_bound:upper_bound]\n",
+    "        predictions_binary_lenient[lower_bound:upper_bound] = discrete_test_f1[lower_bound:upper_bound]\n",
     "\n",
     "# find the lenient f1-score\n",
-    "lenient_f1_score = sklearn.metrics.f1_score(discrete_test_f1, predictions_f1_lenient)\n",
+    "lenient_f1_score = sklearn.metrics.f1_score(discrete_test_f1, predictions_binary_lenient)\n",
     "print(lenient_f1_score)\n"
    ]
   },
@@ -771,7 +828,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "discrete_test_f1[920:950], predictions_f1[920:950]\n",
+    "discrete_test_f1[920:950], predictions_binary[920:950]\n",
     "\n"
    ]
   },
