tectal mask finished

--- a/test_notebooks/230829/decode_stimulus_laterality_supervised_inferred_spikes_predict-on-train.ipynb
+++ b/test_notebooks/230829/decode_stimulus_laterality_supervised_inferred_spikes_predict-on-train.ipynb
@@ -662,8 +662,13 @@
    "outputs": [],
    "source": [
     "### FUNCTION ###\n",
-    "def create_lenient_predictions(test_data, prediction_data, stim_types):\n",
-    "    ''' find the indexes where a prediction was made '''\n",
+    "def create_lenient_predictions(test_data, prediction_data, stim_types, stim_length=22):\n",
+    "    ''' find the indexes where a prediction was made, and copy the ground truth\n",
+    "        for the relevant stimulus if this prediction lies within stimulus on '''\n",
+    "    \n",
+    "    leniency_range = stim_length*2\n",
+    "    predictions_lenient = np.zeros(prediction_data.size)\n",
+    "\n",
     "    stim_predictions = []\n",
     "    for stim in stim_types:\n",
     "        stim_predictions.append(np.where(np.isin(prediction_data, stim))[0])\n",
@@ -857,9 +862,9 @@
     "## report f1-score ##\n",
     "\n",
     "print(f\"Strict f1-score:  {f1_score:.3f}\\nLenient f1-score: {f1_score_lenient:.3f}\\n\"+\n",
-    "      f\"Strict multiclass f1-score (stim-only avg): {f1_score_multiclass_weighted_stim:.3f}\\n\"+\n",
-    "      f\"Strict multiclass f1-score (avg all): {f1_score_multiclass_weighted_all:.3f}\\n\"+\n",
-    "      f\"Lenient multiclass f1-score (avg all): {f1_score_multiclass_weighted_all:.3f}\\n\")\n",
+    "      f\"Strict multiclass f1-score (stim-only avg): {f1_score_multiclass_average_stim:.3f}\\n\"+\n",
+    "      f\"Strict multiclass f1-score (avg all): {f1_score_multiclass_average_all:.3f}\\n\"+\n",
+    "      f\"Lenient multiclass f1-score (avg all): {f1_score_multiclass_lenient_average_all:.3f}\\n\")\n",
     "\n",
     "\n",
     "## save f1-score ##\n",
