f1-score bar chart and pre-tidying of trial-time notebook

--- a/test_notebooks/230829/decode_stimulus_laterality_supervised_inferred_spikes_tectal-mask.ipynb
+++ b/test_notebooks/230829/decode_stimulus_laterality_supervised_inferred_spikes_tectal-mask.ipynb
@@ -94,8 +94,7 @@
     "SAVE_DATA = False\n",
     "LOAD_MODEL = True\n",
     "SAVE_MODEL = False\n",
-    "SAVE_FIGS = True\n",
-    "SAVE_FIGS_LABEL = 'predict-on-train_'\n",
+    "SAVE_FIGS = False\n",
     "STIM_TYPES = {'left_spot':0, 'right_spot':1,  \\\n",
     "              'open_loop_grating':2, 'closed_loop_grating':3}\n",
     "STIMS = ['left_spot', 'right_spot']\n",
@@ -103,7 +102,8 @@
     "STIM_LENGTH_FRAMES = 22\n",
     "HALF_STIM_MASK = True\n",
     "PREDICT_ON_TRAIN = True\n",
-    "RESTRICT_TO_TECTAL = True"
+    "RESTRICT_TO_TECTAL = True\n",
+    "SAVE_FIGS_LABEL = 'predict-on-train_' if SAVE_FIGS and PREDICT_ON_TRAIN else ''"
    ]
   },
   {
