start of week 230911, before replacing bulky code with functions

--- a/test_notebooks/230829/decode_stimulus_laterality_supervised_inferred_spikes_tectal-mask.ipynb
+++ b/test_notebooks/230829/decode_stimulus_laterality_supervised_inferred_spikes_tectal-mask.ipynb
@@ -487,7 +487,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33272faa56b94613af41b2a850018b42",
+       "model_id": "f93c29b31aff48fdab351d504371d310",
        "version_major": 2,
        "version_minor": 0
       },
@@ -539,7 +539,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0de7427c936e4ba7a1e60e8915105e47",
+       "model_id": "c1983320c729493e84b448a5bae4aa1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,7 +607,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f228cd5ef11d4afdb36926d8a52f7da3",
+       "model_id": "6cc95421406f463e87eef789eff514d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -824,7 +824,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f0cb1ccda00>"
+       "<matplotlib.legend.Legend at 0x7f5dedd38070>"
       ]
      },
      "execution_count": 13,
@@ -834,7 +834,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6009717a91454f29a6f7f2543c276569",
+       "model_id": "1354610011b14dff915c22aed8638a53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -859,7 +859,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cbfa54e39db490e84a58452a4311d43",
+       "model_id": "02e2f58b4d6744068d1b2efd5000c15c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -884,7 +884,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a4abbcf72c34f9e9ff5515c9699e08f",
+       "model_id": "e441f096ae9548fd97bb0de2c54b5460",
        "version_major": 2,
        "version_minor": 0
       },
@@ -909,7 +909,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d98e5bdaf49420789a00cc1a48b6296",
+       "model_id": "df8b89e47f994d278dc91d9e2a62e491",
        "version_major": 2,
        "version_minor": 0
       },
