--- a/test_notebooks/230911/decode_stimulus_laterality_supervised_tectal-mask_continuous-and-discrete.ipynb
+++ b/test_notebooks/230911/decode_stimulus_laterality_supervised_tectal-mask_continuous-and-discrete.ipynb
@@ -4,25 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test SPIM data CEBRA model\n",
+    "## SPIM data CEBRA model\n",
     "\n",
     "- Use CEBRA label contrastive learning on neural data from one fish\n",
     "    - design model\n",
-    "    - convert SPIM data to usable format \n",
     "    - load data\n",
-    "    - fit with label\n",
+    "    - SPIM data preprocessing\n",
+    "    - fit with label of the stimulus\n",
     "    - plot embeddings\n",
-    "    - try to predict stimulus presence\n",
-    "    - try to decode stimulus type (left/right spots)\n",
-    "        - create a discrete variable that labels the post-stimulus frames for right and left spots\n",
-    "        - This should inform the decoder to separate embedding states (which should vary between left and right spots)<br/><br/>"
+    "    - decode stimulus presence and type (left/right spots)<br/><br/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create trial structure, with 4s pre- and post-stim, removing dead time"
+    "### labelled CEBRA with both discrete (second half of stimulus) and continuous (linear increase through stimulus) variables"
    ]
   },
   {
@@ -77,9 +74,13 @@
     "global TRAINING_TEST_SPLIT     # split fraction for embedding model\n",
     "global STIM_LENGTH_FRAMES      # the length in frames of stimuli, assuming all stimuli have equal duration\n",
     "global HALF_STIM_MASK          # only use the second half of stimuli for training the model\n",
+    "global DISCRETE_AND_CONT_STIM  # combine the discrete stimulus identifier variable with an linearly increasing \n",
+    "                               # continuous variable\n",
     "global PREDICT_ON_TRAIN        # for decoder, do both training and prediciton on the training set\n",
     "global RESTRICT_TO_TECTAL      # get random subset of neurons from the tectal mask only\n",
     "global TRIAL_TIME              # If True, use concatenated peri-trial timeseries instead of continuous timeseries\n",
+    "global SIGNAL_TYPE             # whether to use deconvolved calcium or raw calcium\n",
+    "\n",
     "\n",
     "LABEL = 'spot'                                                          # set as '' for time-contrastive\n",
     "EXTRA_LABEL = 'second-half-stims_deconv_tectal_trial-time'\n",
@@ -102,10 +103,12 @@
     "TRAINING_TEST_SPLIT = 0.8\n",
     "STIM_LENGTH_FRAMES = 22\n",
     "HALF_STIM_MASK = True\n",
+    "DISCRETE_AND_CONT_STIM = True\n",
     "PREDICT_ON_TRAIN = True\n",
     "RESTRICT_TO_TECTAL = True\n",
     "SAVE_FIGS_LABEL = 'predict-on-train_' if SAVE_FIGS and PREDICT_ON_TRAIN else ''\n",
-    "TRIAL_TIME = True\n"
+    "TRIAL_TIME = True\n",
+    "SIGNAL_TYPE = 'deconv'        # dfof for raw, deconv for deconvolved\n"
    ]
   },
   {
@@ -160,6 +163,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_neural_dataset(f, neural, rois, tectal_mask=None, timesteps=None):  \n",
+    "    \n",
+    "    # decide whether to sample from all neurons, or tectal neurons only\n",
+    "    if RESTRICT_TO_TECTAL:\n",
+    "        \n",
+    "        print(\"Taking tectal neurons only.\")\n",
+    "        tectal_mask = f['rois']['anat_label']['tectum_SPV_AZ'][:]\n",
+    "        neural_indexes = np.sort(\n",
+    "                            np.random.choice(\n",
+    "                                            np.where(tectal_mask)[0], size=rois, replace=False\n",
+    "                                            )\n",
+    "                                )\n",
+    "    else:\n",
+    "        \n",
+    "        # subset neural by selecting first TIMESTEPS timesteps and random ROIS rois\n",
+    "        neural_indexes = np.sort(\n",
+    "                            np.random.choice(\n",
+    "                                        np.arange(neural.shape[1]), size=rois, replace=False\n",
+    "                                        )\n",
+    "                            )\n",
+    "    \n",
+    "    # if a subset of timesteps is chosen, restrict data to this subset\n",
+    "    if timesteps:\n",
+    "        neural = np.array(neural[:timesteps, neural_indexes])\n",
+    "    else:\n",
+    "        neural = np.array(neural[:, neural_indexes])\n",
+    "        timesteps = neural.shape[0]\n",
+    "\n",
+    "    print(f\"Truncated dataset size: {neural.shape}\")\n",
+    "    assert(neural.shape == (timesteps, rois))\n",
+    "\n",
+    "    return neural_indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -176,7 +219,7 @@
     }
    ],
    "source": [
-    "### load data for a single fish ###\n",
+    "### load and preprocess data for a single fish ###\n",
     "# if LOAD == True, load pre-saved .npz file data. Otherwise,\n",
     "# create this data as specified below and save it to .npz\n",
     "\n",
@@ -199,20 +242,19 @@
     "data_folder = DATA_PATH\n",
     "data_folder_HDD = '/media/storage/DATA/tom/'\n",
     "filename_stim_pres_frames = f'{filename[-9:]}_stim_pres_frames.npz'\n",
-    "filename_deconv = f'{filename[-9:]}_deconv.npz'\n",
-    "filename_deconv_subset = f'{filename[-9:]}_deconv_subset.npz'\n",
-    "filename_neural_indexes = f'{filename[-9:]}_neural_indexes.npz'\n",
+    "filename_neural_subset = f'{filename[-9:]}_{SIGNAL_TYPE}_subset.npz'\n",
+    "filename_neural_indexes = f'{filename[-9:]}_neural_indexes_all.npz'\n",
     "\n",
     "# specify loading anatomically unrestricted data or tectal-restricted data\n",
     "if RESTRICT_TO_TECTAL:\n",
-    "    filename_deconv_subset = f'{filename[-9:]}_deconv_subset_tectal.npz'\n",
+    "    filename_neural_subset = f'{filename[-9:]}_{SIGNAL_TYPE}_subset_tectal.npz'\n",
     "    filename_neural_indexes = f'{filename[-9:]}_neural_indexes_tectal.npz'\n",
     "\n",
     "# if not loading data, but not wanting to overwrite saved data, save as a temp file\n",
     "if not save_data and not load_data: \n",
     "    print(f\"Producing temp files...\")\n",
-    "    filename_deconv = f'{filename[-9:]}_deconv_TEMPORARY_DELETE.npz'\n",
-    "    filename_deconv_subset = f'{filename[-9:]}_deconv_subset_TEMPORARY_DELETE.npz'\n",
+    "    filename_neural = f'{filename[-9:]}_{SIGNAL_TYPE}_TEMPORARY_DELETE.npz'\n",
+    "    filename_neural_subset = f'{filename[-9:]}_{SIGNAL_TYPE}_subset_TEMPORARY_DELETE.npz'\n",
     "    filename_stim_pres_frames = f'{filename[-9:]}_stim_pres_frames_TEMPORARY_DELETE.npz'\n",
     "\n",
     "\n",
@@ -234,11 +276,11 @@
     "        ## loading full dataset from SSD\n",
     "        # neural = cebra.load_data(f\"{data_folder}{filename_deconv}\", key=key)\n",
     "        # loading subset of dataset that was just created and saved\n",
-    "        neural = cebra.load_data(f\"{data_folder}{filename_deconv_subset}\", key=key)\n",
+    "        neural = cebra.load_data(f\"{data_folder}{filename_neural_subset}\", key=key)\n",
     "        print(\"Neural data loaded\")\n",
     "\n",
     "    except:\n",
-    "        print(f\"Could not neural data from file {data_folder}{filename_deconv_subset} under key {key}.\")\n",
+    "        print(f\"Could not neural data from file {data_folder}{filename_neural_subset} under key {key}.\")\n",
     "        # try:\n",
     "        #     neural = cebra.load_data(filepath, key='rois/deconv')\n",
     "        #     print(\"Full neural data loaded from HDD file.\")\n",
@@ -259,7 +301,7 @@
     "\n",
     "            ## neural ##\n",
     "\n",
-    "            neural = f['rois']['deconv']\n",
+    "            neural = f['rois'][f'{SIGNAL_TYPE}']\n",
     "            print(f\"Full neural dataset shape is: {neural.shape}\")\n",
     "\n",
     "            # decide whether to sample from all neurons, or tectal neurons only\n",
@@ -280,6 +322,7 @@
     "                                                np.arange(neural.shape[1]), size=rois, replace=False\n",
     "                                                )\n",
     "                                    )\n",
+    "            \n",
     "            # if a subset of timesteps is chosen, restrict data to this subset\n",
     "            if timesteps:\n",
     "                neural = np.array(neural[:timesteps, neural_indexes])\n",
@@ -360,7 +403,7 @@
     "\n",
     "            np.savez(f'{data_folder}{filename_stim_pres_frames}', stim_on_frames=stim_on_mask_dataset)\n",
     "            print(f\"Stim presentation dataset saved.\")\n",
-    "            np.savez(f\"{data_folder}{filename_deconv_subset}\", neural=neural)\n",
+    "            np.savez(f\"{data_folder}{filename_neural_subset}\", neural=neural)\n",
     "            print(f\"Neural dataset saved.\")\n",
     "            np.savez(f\"{data_folder}{filename_neural_indexes}\", neural_indexes=neural_indexes)\n",
     "            print(f\"All datasets saved.\")\n",
@@ -379,11 +422,11 @@
     "                # neural = cebra.load_data(f\"{data_folder}{filename_deconv}\", key=key)\n",
     "                # loading subset of dataset that was just created and saved\n",
     "\n",
-    "                neural = cebra.load_data(f\"{data_folder}{filename_deconv_subset}\", key=key)\n",
+    "                neural = cebra.load_data(f\"{data_folder}{filename_neural_subset}\", key=key)\n",
     "                print(\"Neural data loaded\")\n",
     "\n",
     "            except:\n",
-    "                print(f\"Could not neural data from file {data_folder}{filename_deconv_subset} under key {key}.\")\n",
+    "                print(f\"Could not neural data from file {data_folder}{filename_neural_subset} under key {key}.\")\n",
     "                try:\n",
     "                    neural = cebra.load_data(filepath, key='rois/deconv')\n",
     "                    print(\"Full neural data loaded from HDD file.\")\n",
